benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_ModExpPow2_int_iter1_error.log
=== Verification Error - Iteration 1 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExpPow2_int.rs
Time: 2025-09-15 20:46:59

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExpPow2_int_impl.rs:16:10
   |
16 |         (result as nat) == Exp_int(x as nat, Exp_int(2, n as nat)) % (m as nat),
   |          ^^^^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.

--------------------------------------------------------------------------------

Additional Output:
error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExpPow2_int_impl.rs:16:10
   |
16 |         (result as nat) == Exp_int(x as nat, Exp_int(2, n as nat)) % (m as nat),
   |          ^^^^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
